--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -69,253 +69,13 @@
         </div>
 
 
-        <div class="trips-white-cont">
-            <div class="trips-content">
-                <h2>World through my eyes</h2>
+        <div class="trips-white-cont gallery">
+            <div class="gallery-cont" onWheel= "this.scrollLeft+=event.deltaY>0?100:-100">
+                
 
-                <h6>Australia (West)</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/australia1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/australia2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/australia3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/australia4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/australia5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/australia6.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/australia7.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/australia8.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/australia9.jpg" /></div>
-                </div>
+                <!-- <div class="gallery-img vert"><img src="../images/gallery/bergen2.jpg" /></div> -->
+                <!-- <div class="gallery-img sq"><img src="../images/gallery/bergen3.jpg" /></div> -->
 
-                <h6>Babia Mountain</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/babia1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/babia2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/babia3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/babia4.jpg" /></div>
-                </div>
-
-                <h6>Bergen</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/bergen1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/bergen2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/bergen3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/bergen4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/bergen5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/bergen6.jpg" /></div>
-                </div>
-
-                <h6>Canada</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/canada1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada6.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada7.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada8.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada9.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada10.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada11.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada12.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/canada13.jpg" /></div>
-                </div>
-
-                <h6>Gran Canaria</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/gran_canaria1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/gran_canaria2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/gran_canaria3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/gran_canaria4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/gran_canaria5.jpg" /></div>
-                </div>
-
-                <h6>Iceland</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/iceland1.jpg" /></div>
-                </div>
-
-                <h6>Madeira</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/madeira1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/madeira2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/madeira3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/madeira4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/madeira5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/madeira6.jpg" /></div>
-                </div>
-
-                <h6>Malaysia</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/malaysia1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/malaysia2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/malaysia3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/malaysia5.jpg" /></div>
-                </div>
-
-                <h6>Mauritius</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/mauritius1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius6.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius7.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius8.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius9.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius10.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/mauritius11.jpg" /></div>
-                </div>
-
-                <h6>Namibia</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/namibia1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia6.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia7.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia8.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia9.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia10.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia11.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia12.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia13.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia14.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia15.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/namibia16.jpg" /></div>
-                </div>
-
-                <h6>Nepal</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/nepal1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal6.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal7.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal8.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal9.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal10.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal11.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal12.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal13.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal14.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/nepal15.jpg" /></div>
-                </div>
-
-                <h6>North-West France</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/france1.jpg" /></div>
-                </div>
-
-                <h6>Polynesia</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/polynesia1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/polynesia2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/polynesia3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/polynesia4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/polynesia5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/polynesia6.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/polynesia7.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/polynesia9.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/polynesia10.jpg" /></div>
-                </div>
-
-                <h6>Portugal</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/portugal1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/portugal2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/portugal3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/portugal4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/portugal5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/portugal6.jpg" /></div>
-                </div>
-
-                <h6>San Francisco</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/san_francisco1.jpg" /></div>
-                </div>
-
-                <h6>Singapore</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/singapore1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/singapore2.jpg" /></div>
-                </div>
-
-                <h6>South Korea</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/korea1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/korea2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/korea3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/korea4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/korea5.jpg" /></div>
-                </div>
-
-                <h6>Taiwan</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/taiwan1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/taiwan2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/taiwan3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/taiwan4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/taiwan5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/taiwan6.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/taiwan7.jpg" /></div>
-                </div>
-
-                <h6>Tatra Mountains 1</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/1tatras_winter1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/1tatras_winter2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/1tatras_winter3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/1tatras_winter4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/1tatras_winter5.jpg" /></div>
-                </div>
-
-                <h6>Tatra Mountains 2</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/2tatras_winter1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/2tatras_winter2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/2tatras_winter3.jpg" /></div>
-                </div>
-
-                <h6>Tenerife</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/tenerife1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tenerife2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tenerife4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tenerife5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tenerife6.jpg" /></div>
-                </div>
-
-                <h6>Tunisia</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/tunisia1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tunisia2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tunisia3.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tunisia4.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tunisia5.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tunisia6.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tunisia7.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/tunisia8.jpg" /></div>
-                </div>
-
-                <h6>Turbacz</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/turbacz1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/turbacz2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/turbacz3.jpg" /></div>
-                </div>
-
-                <h6>Victoria Falls</h6>
-                <div class="photos-stack">
-                    <div class="gallery-img"><img src="../images/gallery/victoria_falls1.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/victoria_falls2.jpg" /></div>
-                    <div class="gallery-img"><img src="../images/gallery/victoria_falls3.jpg" /></div>
-                </div>
 
             </div>
         </div>
@@ -329,5 +89,6 @@
 
     <script src="../scripts/moving_bg.js"></script>
     <script src="../scripts/scroll_button.js"></script>
+    <script src="../scripts/scroll_gallery.js"></script>
 </body>
 </html>
