Add some more todo pages

--- a/pages/trips.html
+++ b/pages/trips.html
@@ -77,7 +77,7 @@
                 <h6>2025</h6>
 
                 <div class="trips-stack">
-                    <a href="#" class="trip-link">
+                    <a href="./trips/malaysia.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/malaysia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -88,7 +88,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/west_australia.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/west_australia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -137,7 +137,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/madeira.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/madeira/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -148,7 +148,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/portugal.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/portugal/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -159,7 +159,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/taiwan.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/taiwan/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -170,7 +170,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/korea.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/korea/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
