--- a/pages/map.html
+++ b/pages/map.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../assets/map.css">
     <link rel="stylesheet" href="../assets/tooltip.css">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://d3-geo-projection.github.io/d3-geo-projection.v2.min.js"></script>
     <script type="module" defer>
@@ -100,7 +100,7 @@
     <script src="../scripts/countries_list.js"></script>
     <script src="../scripts/map_nav.js"></script>
     <script src="../scripts/globe.js"></script>
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
     <script src="../scripts/pins_map.js"></script>
 </body>
 </html>
