Add missing TODO trips pages

--- a/pages/trips.html
+++ b/pages/trips.html
@@ -185,7 +185,7 @@
                 <h6>2023</h6>
 
                 <div class="trips-stack">
-                    <a href="#" class="trip-link">
+                    <a href="./trips/gran_canaria.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/gran_canaria/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -196,7 +196,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/mauritius.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/mauritius/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -207,7 +207,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/namibia.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/namibia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -218,7 +218,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/tunisia.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/tunisia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -233,7 +233,7 @@
                 <h6>2022</h6>
 
                 <div class="trips-stack">
-                    <a href="#" class="trip-link">
+                    <a href="./trips/bergen.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/bergen/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -244,7 +244,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/tenerife.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/tenerife/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -255,7 +255,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/denmark.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/denmark/thumb.jpg" alt="Image from trip" class="trip-card-bg" style="object-position:30% center;">
 
@@ -266,7 +266,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/nepal.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/nepal/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
@@ -281,7 +281,7 @@
                 <h6>2021</h6>
 
                 <div class="trips-stack">
-                    <a href="#" class="trip-link">
+                    <a href="./trips/krk_to_baltik.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/krk_to_baltik/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
