--- a/pages/trips/canada.html
+++ b/pages/trips/canada.html
@@ -232,7 +232,7 @@
             </p>
 
             <div id="animated_route_data" data-svg-id="canada_roadtrip" data-data-url="trips/canada_roadtrip.json"></div>
-            <svg id="canada_roadtrip"></svg>
+            <svg id="canada_roadtrip" class="roadtrip-animated-map"></svg>
             <span class="post-img-label">Roadtrip map</span>
             <br />
 
