--- a/pages/trips/polynesia.html
+++ b/pages/trips/polynesia.html
@@ -111,7 +111,7 @@
             </p>
 
             <div id="globe_flights_data" data-svg-id="polynesia_flights"></div>
-            <canvas id="polynesia_flights"></canvas>
+            <canvas id="polynesia_flights" class="roadtrip-animated-map"></canvas>
             <span class="post-img-label">Flights</span>
             <br />
 
