--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
-<body>
+<body> 
+
     <div class="background tooltip-parent">
+        <canvas class="background__canvas"></canvas>
+
         <div class="tooltip left" data-position="4" style="left: 35%; top: 43%;">
             <span class="hint-radius"></span>
             <span class="hint-dot"></span>
@@ -65,6 +68,6 @@
         <a href="https://www.instagram.com/bardzo_maly_czlowiek/" target="_blank" title="Instagram" class="right-icon"><svg  xmlns="http://www.w3.org/2000/svg"  class="social-link"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-instagram"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" /><path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M16.5 7.5v.01" /></svg></a>
     </footer>
 
-    <script src="./scripts/moving_bg.js"></script>
+	<script src="./heat_distortion/index/desert.js"></script>
 </body>
 </html>
