Add effect to blog and improve index

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -51,7 +51,7 @@
     <div id="trips_content_wrapper">
         <div class="trips-top-banner tooltip-parent">
             <div class="trips-bg gallery-bg"></div>
-            <div id="sd_container">
+            <div id="sd_container" class="white">
                 <div class="arrow"></div>
                 <div class="arrow"></div>
             </div>
