Log to see the gyroscope

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     <header>
         <a href="#"><img src="./images/qubix_black.png" alt="Qubix logo" class="logo" /></a>
+        <p id="log">test</p>
 
         <nav>
             <ul>
