--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <header>
         <a href="#"><img src="./images/qubix_black.png" alt="Qubix logo" class="logo" /></a>
-        <p id="log">test</p>
+        <p id="log"></p>
 
         <nav>
             <ul>
