--- a/pages/trips.html
+++ b/pages/trips.html
@@ -89,6 +89,18 @@
                 <h6>2025</h6>
 
                 <div class="trips-stack">
+
+                    <a href="./trips/china.html" class="trip-link">
+                        <div class="trip-card">
+                            <img src="../images/trips/china/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+
+                            <div class="trip-card-content">
+                                <strong>China</strong>
+                                <p>July 2025</p>
+                            </div>
+                        </div>
+                    </a>
+
                     <a href="./trips/malaysia.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/malaysia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
