Update gallery from china

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -122,6 +122,22 @@
                 <div class="gallery-img vert"><img src="../images/gallery/canada12.jpg" /></div>
                 <div class="gallery-img sq"><img src="../images/gallery/canada13.jpg" /></div>
                 <div class="gallery-img vert"><img src="../images/gallery/canada8.jpg" /></div>
+                <div class="gallery-img vert"><img src="../images/gallery/china2.jpg" /></div>
+                <div class="gallery-img sq"><img src="../images/gallery/china4.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/china5.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/china6.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/china8.jpg" /></div>
+                <div class="gallery-img sq"><img src="../images/gallery/china12.jpg" /></div>
+                <div class="gallery-img vert"><img src="../images/gallery/china1.jpg" /></div>
+                <div class="gallery-img vert"><img src="../images/gallery/china13.jpg" /></div>
+                <div class="gallery-img sq"><img src="../images/gallery/china10.jpg" /></div>
+                <div class="gallery-img sq"><img src="../images/gallery/china11.jpg" /></div>
+                <div class="gallery-img vert"><img src="../images/gallery/china3.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/china9.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/china14.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/china15.jpg" /></div>
+                <div class="gallery-img vert"><img src="../images/gallery/china7.jpg" /></div>
+                <div class="gallery-img sq"><img src="../images/gallery/china16.jpg" /></div>
                 <div class="gallery-img"><img src="../images/gallery/france1.jpg" /></div>
                 <div class="gallery-img"><img src="../images/gallery/gran_canaria1.jpg" /></div>
                 <div class="gallery-img"><img src="../images/gallery/gran_canaria2.jpg" /></div>
