Add wwa packraft trip

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -246,7 +246,16 @@
                 <div class="gallery-img sq"><img src="../images/gallery/victoria_falls1.jpg" /></div>
                 <div class="gallery-img vert"><img src="../images/gallery/victoria_falls3.jpg" /></div>
                 <div class="gallery-img vert"><img src="../images/gallery/victoria_falls2.jpg" /></div>
-                <div class="gallery-img sq"></div>
+                <div class="gallery-img sq"><img src="../images/gallery/wwa_packraft9.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/wwa_packraft1.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/wwa_packraft2.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/wwa_packraft6.jpg" /></div>
+                <div class="gallery-img sq"><img src="../images/gallery/wwa_packraft4.jpg" /></div>
+                <div class="gallery-img vert"><img src="../images/gallery/wwa_packraft8.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/wwa_packraft3.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/wwa_packraft5.jpg" /></div>
+                <div class="gallery-img"><img src="../images/gallery/wwa_packraft7.jpg" /></div>
+                <!-- <div class="gallery-img sq"></div> -->
 
             </div>
         </div>
