--- a/pages/trips.html
+++ b/pages/trips.html
@@ -90,6 +90,17 @@
 
                 <div class="trips-stack">
 
+                    <a href="./trips/wwa_packraft.html" class="trip-link">
+                        <div class="trip-card">
+                            <img src="../images/trips/wwa_packraft/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+
+                            <div class="trip-card-content">
+                                <strong>Packraft trip<br/>KRK - WWA</strong>
+                                <p>Sep 2025</p>
+                            </div>
+                        </div>
+                    </a>
+
                     <a href="./trips/china.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/china/thumb.jpg" alt="Image from trip" class="trip-card-bg">
